Bug 240617 - Skype does not work from Kadressbook
Summary: Skype does not work from Kadressbook
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-03 16:59 UTC by m.wege
Modified: 2010-06-08 14:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2010-06-03 16:59:45 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

I just wanted to use Skype from Kaddressbook. It is set in settings, but still I received the error message that I there is no application set when I clicked on a phone no.


Reproducible: Always

Steps to Reproduce:
Click on a phone no in Kaddressbook, have phone no associated to Skype in Kaddressbook settings.
I tested it without Skype running, with Skype running, with Kopete running (having started Skype)

Actual Results:  
The above error message

Expected Results:  
Kaddressbook should check if Skype and/or Kopete with configured Skype plugin is running. If only Skype plugin is running, it should dial directly via Skype. If Kopete with Skype plugin is running, it should use Kopete to do it. If none is running, it should either start Kopete with Skype plugin or Skype.
Comment 1 Pali Rohár 2010-06-08 10:35:00 UTC
Try change setting to use "external application" and change command to:

kopete skype:%n?call

If you have configured skype protocol in kopete, kopete can hande all commands from skype action handler (like on windows). So it works too for URLs skype: address from konqueror.
Comment 2 m.wege 2010-06-08 10:55:40 UTC
The suggested workaround works.
Comment 3 Tobias Koenig 2010-06-08 14:23:43 UTC
SVN commit 1135934 by tokoe:

Only check the command if we use external phone application

BUG: 240617


 M  +7 -7      dialphonenumberaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135934