Only check the command if we use external phone application

BUG: 240617

svn path=/trunk/KDE/kdepimlibs/; revision=1135934